--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.androidbegin.yqltutorial" >
+          package="com.androidbegin.yqltutorial">
     <uses-sdk
             android:minSdkVersion="8"
     />
