--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,20 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+
+
+                compile 'com.android.support:appcompat-v7:22.1.1'
+                compile 'com.android.support:cardview-v7:22.1.1'
+                compile 'com.android.support:recyclerview-v7:+'
     testCompile 'junit:junit:4.12'
+}
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'
+            }
+        }
+    }
 }
